fix: adjust line height for code blocks from 1.6em to 1.4em for improved readability

--- a/iWonder/engine-scheme/highlighter.css
+++ b/iWonder/engine-scheme/highlighter.css
@@ -159,7 +159,7 @@ code {
   font-family: var(--header-font-family);
   padding: 3px;
   border-radius: 4px;
-  line-height: 1.6em;
+  line-height: 1.4em;
   /* 最小行高, 防止after导致的高度塌陷 */
   min-height: calc(1lh + 6px);
 }
